# chapp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test_db.cpp
Description/: .team_descr.json.swn  .team_descr.json.swo  .team_descr.json.swp  base.xml  team.json
UML/: base.xml
client_common/: AesEncoder.cpp  AesEncoder.h  CMakeLists.txt  Command.cpp  Command.h  Connection.cpp  Connection.h  DiffiHellmanCmd.cpp  DiffiHellmanCmd.h  DiffieHellmanCalcSharedKey.cpp  DiffieHellmanCmd.cpp  DiffieHellmanCmd.h  DiffieHellmanInit.cpp  DiffieHellmanInit.h  DiffieHellmanWrapper.cpp  DiffieHellmanWrapper.h  RequestCmd.cpp  RequestCmd.h  RequestQueue.cpp  RequestQueue.h  main.cpp
common/: APIHandler.cpp  APIUtil.cpp  CMakeLists.txt  Common.cpp  Group.cpp  Message.cpp  Message.hpp  Session.cpp  Session.hpp  User.cpp  User.hpp  UserFactory.cpp  Util.cpp  main.cpp
common/fabrics/: GroupFabric.cpp  GroupFabric.hpp
common/groups/: AbstractGroup.cpp  AbstractGroup.hpp  GroupCredentials.cpp  GroupCredentials.hpp  InviteGroup.cpp  InviteGroup.hpp  PrivateGroup.cpp  PrivateGroup.hpp  PublicGroup.cpp  PublicGroup.hpp
common/includes/: APIHandler.hpp  APIUtil.hpp  Common.hpp  Errors.hpp  Factories.hpp  Group.hpp  GroupTypes.hpp  Phash.hpp  Placeholders.hpp  Session.hpp  User.hpp  UserFactory.hpp  Util.hpp
common/misc/: test_phash.cpp  tidyall.sh
common/test-includes/: GroupFactory.hpp  NoDatabaseGlue.hpp
description/: base.xml
proto/: CMakeLists.txt  chapp.proto
redis/: CMakeLists.txt  Database.cpp  GroupFactory.cpp
redis/includes/: Database.h  Database.hpp  GroupFactory.hpp
redis/includes/html/: _database_8hpp_source.html  _group_factory_8hpp_source.html  annotated.html  class_chapp_1_1_group_factory-members.html  class_chapp_1_1_group_factory.html  class_database-members.html  class_database.html  classes.html  files.html  functions.html  functions_enum.html  functions_func.html  menudata.js  namespace_chapp.html  namespaces.html
redis/includes/html/search/: all_0.js  all_2.js  all_3.js  classes_1.js  enums_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js
redis/includes/latex/: annotated.tex  class_chapp_1_1_group_factory.tex  class_database.tex  namespace_chapp.tex  namespaces.tex  refman.tex
server/: AesEncoder.cpp  AesEncoder.h  CMakeLists.txt  Client.cpp  Client.h  Command.h  DiffieHellmanCalcSharedKey.cpp  DiffieHellmanCalcSharedKey.h  DiffieHellmanInit.cpp  DiffieHellmanInit.h  DiffieHellmanWrapper.cpp  DiffieHellmanWrapper.h  RequestQueue.cpp  RequestQueue.h  Server.cpp  Server.hpp  User.cpp  User.h  main.cpp
